--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -22,6 +22,7 @@
 
      </div>
      <!-- popular recpie of the week -->
+
       <div class="my-5 p-5" >
         <h1>Popular Recipe of the Week</h1>
         <div class="d-flex justify-content-between">
@@ -31,14 +32,17 @@
         <!-- all recipes -->
          <div class="row my-3">
             <!-- duplicate column according to recipe -->
-             <div class="col-lg-4">
+
+            @for (recipe of allRecipes(); track $index) {
+                 <div class="col-lg-4">
                 <div class="p-3">
-                    <img class="card-img-top" src="https://www.pngall.com/wp-content/uploads/2/Healthy-Meal.png" alt="meal img">
+                    <img class="card-img-top" [src]="recipe.image" alt="meal img">
                     <div class="card-body">
-                        <h5 class="card-title" >name</h5>
+                        <h5 class="card-title" >{{recipe.name}}</h5>
                     </div>
                 </div>
              </div>
+            }
          </div>
       </div>
       <!-- banner -->
