--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,1 +1,56 @@
-<p>login works!</p>
+
+<div>
+    <div 
+  class="d-flex align-items-center justify-content-center min-vh-100"
+  style="background-image:url('https://static.vecteezy.com/system/resources/thumbnails/033/027/755/small_2x/flat-lay-vegetables-on-white-background-food-and-diet-concept-ai-generated-free-photo.jpg'); background-size:cover; background-position:right center; background-repeat:no-repeat;"
+>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-11 col-sm-8 col-md-6 col-lg-4">
+
+        <!-- Heading -->
+        <div class="text-center mb-4">
+          <h2 class="fw-bold">Login</h2>
+          <p class="text-muted mb-0">
+            More than 100 plus Recipes from around the world
+          </p>
+        </div>
+
+        <!-- Login Card -->
+        <div class="card shadow p-4 border-0 rounded-3">
+          <div class="text-center mb-3">
+            <h4 class="fw-bold mb-0">
+              <i class="fa-solid fa-graduation-cap"></i>Cookpedia
+            </h4>
+          </div>
+
+          <form>
+            <div class="mb-3">
+              <input 
+                type="email" 
+                class="form-control py-2" 
+                placeholder="E Mail"
+              >
+            </div>
+
+            <div class="mb-3">
+              <input 
+                type="password" 
+                class="form-control py-2" 
+                placeholder="Password"
+              >
+            </div>
+
+            <button class="btn btn-success w-100 py-2 fw-semibold">
+              Login
+            </button>
+          </form>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+<app-footer></app-footer>
