ADD:filter search pagination

--- a/src/app/recipes/recipes.html
+++ b/src/app/recipes/recipes.html
@@ -4,7 +4,7 @@
         <div class="col-lg-4">
             <h4>Filter</h4>
             <!-- all btn -->
-             <button class="btn mt-5" >All</button>
+             <button (click)="getAllRecipes()" class="btn mt-5" >All</button>
              <!-- cuisine dropdown -->
 
              <div>
@@ -13,7 +13,11 @@
   </button>
  <div class="collapse" id="collapseExample">
     <!-- duplicate accroding cuisine type -->
-<button class="btn" >cuisine</button>
+     @for (cuisine of cuisineArray(); track $index) {
+<button (click)="filterRecipe('cuisine',cuisine)" class="btn" >{{cuisine}}</button>
+
+
+     }
 </div>
 
 </div>
@@ -25,7 +29,10 @@
   </button>
  <div class="collapse" id="collapseExample1">
     <!-- duplicate accroding meal type -->
-<button class="btn" >cuisine</button>
+     @for (meal of mealTypeArray(); track $index) {
+        <button (click)="filterRecipe('mealType',meal)" class="btn" >{{meal}}</button>
+
+     }
 </div>
 
 </div>
@@ -33,10 +40,11 @@
         <div class="col-lg-8">
             <div class="d-flex justify-content-between">
                 <h1>All recipes</h1>
-                <input type="text" placeholder="search recipes here" class="form-control w-50">
+                <input [(ngModel)]="searchKey" type="text" placeholder="search recipes here" class="form-control w-50">
             </div>
             <div class="row">
-               @for (recipe of allRecipes(); track $index) {
+                <!-- duplicate according to recipe card -->
+               @for (recipe of allRecipes() | search:searchKey | paginate: { itemsPerPage: 9, currentPage: p }; track $index) {
                  <div class="col-lg-4">
                       <div class="p-3">
                     <img class="card-img-top" [src]="recipe.image" alt="meal img">
@@ -47,9 +55,19 @@
                 </div>
                 </div>
                }
+               @if ((allRecipes() | search:searchKey).length==0) {
+                <p class="my-5 fw-bolder" >Recipe not found!!</p>
+               }
         
                
             </div>
+
+            <!-- pagination -->
+             <div class="mb-3 text-center">
+                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+
+
+             </div>
         </div>
     </div>
 </div>
