--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -26,10 +26,23 @@
        <div class="ms-auto dropdown">
   <button class="btn text-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     <i class="fa-solid fa-user"></i>
+    @if (loginUsername) {
+      <span class="mx-1 fw-bolder" >hi {{loginUsername}}</span>
+    }
   </button>
   <ul class="dropdown-menu">
-    <li><a class="dropdown-item" routerLink="/login">Login</a></li>
-        <li><a class="dropdown-item" routerLink="/register">Register</a></li>
+
+    @if (isLoggedin) {
+      <li><a class="dropdown-item" routerLink="/user/profile">Profile</a></li>
+      <li><a class="dropdown-item" routerLink="user/collection">Recipe Collection</a></li>
+      <li><button (click)="logout()" class="btn" >Logout</button></li>
+
+
+    }@else {
+      <li><a class="dropdown-item" routerLink="/login">Login</a></li>
+      <li><a class="dropdown-item" routerLink="/register">Register</a></li>
+    }
+    
 
   </ul>
 </div>
