--- a/src/app/recipes/recipes.html
+++ b/src/app/recipes/recipes.html
@@ -46,7 +46,7 @@
                 <!-- duplicate according to recipe card -->
                @for (recipe of allRecipes() | search:searchKey | paginate: { itemsPerPage: 9, currentPage: p }; track $index) {
                  <div class="col-lg-4">
-                      <div class="p-3">
+                      <div (click)="viewRecipe(recipe._id)" class="p-3">
                     <img class="card-img-top" [src]="recipe.image" alt="meal img">
                     <div class="card-body">
                         <h5 class="card-title" >{{recipe.name}}</h5>
