--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -1,1 +1,96 @@
-<p>view-recipe works!</p>
+<app-header></app-header>
+
+<div class="container my-4">
+
+  <!-- Back link -->
+  <a routerLink="/recipes" class="text-primary mb-3 d-inline-block">
+    Back To Recipe List
+  </a>
+
+  <!-- Main content -->
+  <div class="row mt-3">
+
+    <!-- Left image -->
+    <div class="col-lg-6 mb-4">
+      <img
+        [src]="recipe().image"
+        alt="Recipe Image"
+        class="img-fluid rounded"
+      />
+
+      <!-- Buttons -->
+      <div class="mt-3 d-flex gap-3">
+        <button class="btn btn-success">Download Recipe</button>
+        <button class="btn btn-primary">Save Recipe</button>
+      </div>
+    </div>
+
+    <!-- Right details -->
+    <div class="col-lg-6">
+
+      <h2 class="fw-bold">{{recipe().name}}</h2>
+
+      <!-- Meta info -->
+      <div class="d-flex flex-wrap gap-4 mt-3">
+        <p><strong>Cuisine:</strong>{{recipe().cuisine}}</p>
+        <p><strong>Servings:</strong> {{recipe().servings}}</p>
+        <p><strong>Mode of Cooking:</strong> {{recipe().difficulty}}</p>
+      </div>
+
+      <!-- Time & calories -->
+      <div class="row text-center mt-4">
+        <div class="col-md-4">
+          <img width="100px" src="https://cdn.vectorstock.com/i/500p/96/64/chefs-clock-icon-food-prep-time-vector-60919664.jpg" alt="">
+          <p class="fw-bold mb-1">Preparation Time</p>
+          <p class="text-danger">{{recipe().prepTimeMinutes}} Minutes</p>
+        </div>
+        <div class="col-md-4">
+        <img width="113px" src="https://static.vecteezy.com/system/resources/thumbnails/066/679/282/small/silhouette-illustration-of-boiling-pot-on-fire-vector.jpg" alt="">
+          <p class="fw-bold mb-1">Cooking Time</p>
+          <p class="text-danger">{{recipe().cookTimeMinutes}}  Minutes</p>
+        </div>
+        <div class="col-md-4">
+        <img width="100px" src="https://thumbs.dreamstime.com/b/calorie-nutrition-value-high-control-knife-fork-icon-counter-food-fitness-label-vector-362631419.jpg" alt="">
+          <p class="fw-bold mb-1">Calories / Serving</p>
+          <p class="text-danger">{{recipe().caloriesPerServing}}</p>
+        </div>
+      </div>
+
+      <!-- Ingredients -->
+      <h4 class="mt-4 fw-bold">Ingredients Needed</h4>
+      <ol >
+       @for (item of recipe().ingredients; track $index) {
+        <li>{{item}}</li>
+       }
+      </ol>
+
+      <!-- Instructions -->
+      <h4 class="mt-4 fw-bold">Cooking Instruction</h4>
+      <ol>
+        @for (item of recipe().instructions; track $index) {
+        <li>{{item}}</li>
+       }
+      </ol>
+
+    </div>
+  </div>
+
+  <!-- Related recipes -->
+  <div class="mt-5">
+    <h4 class="fw-bold">Related Recipes</h4>
+
+    <div class="row mt-3">
+      <div class="col-md-3">
+        <img
+          src="https://cdn.dummyjson.com/recipe-images/8.webp"
+          class="img-fluid rounded"
+          alt="Related recipe"
+        />
+        <p class="mt-2 fw-semibold">{{relatedRecipes().name}}</p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<app-footer></app-footer>
