--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -20,7 +20,7 @@
 
       <!-- Buttons -->
       <div class="mt-3 d-flex gap-3">
-        <button class="btn btn-success">Download Recipe</button>
+        <button (click)="downloadRecipe()" class="btn btn-success">Download Recipe</button>
         <button class="btn btn-primary">Save Recipe</button>
       </div>
     </div>
@@ -80,14 +80,16 @@
     <h4 class="fw-bold">Related Recipes</h4>
 
     <div class="row mt-3">
-      <div class="col-md-3">
+ @for (recipe of relatedRecipes(); track $index) {
+       <div (click)="viewRelatedRecipeDetails(recipe._id)" class="col-md-3">
         <img
-          src="https://cdn.dummyjson.com/recipe-images/8.webp"
+        [src]="recipe.image"
           class="img-fluid rounded"
           alt="Related recipe"
         />
-        <p class="mt-2 fw-semibold">{{relatedRecipes().name}}</p>
+        <p class="mt-2 fw-semibold">{{recipe.name}}</p>
       </div>
+ }
     </div>
   </div>
 
