--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -21,7 +21,7 @@
       <!-- Buttons -->
       <div class="mt-3 d-flex gap-3">
         <button (click)="downloadRecipe()" class="btn btn-success">Download Recipe</button>
-        <button class="btn btn-primary">Save Recipe</button>
+        <button (click)="saveRecipe()" class="btn btn-primary">Save Recipe</button>
       </div>
     </div>
 
