--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -1,1 +1,34 @@
-<p>user-profile works!</p>
+<app-header></app-header>
+<div class="container" >
+    <div style="height: 200px;" class="row bg-success"></div>
+    <div style="width: 220px; height: 220px; border-radius: 50%; margin-top: -110px; " class="p-1 shadow d-flex justify-content-center align-items-center" >
+       <label for="upload"> <img style="width: 200px; height: 200px; border-radius: 50%;" [src]="userImage" alt="user profile">
+    </label>
+    <input type="file" id="upload" hidden>
+    </div>
+    <label style="margin-top: -40px; margin-left: 100px;" for="upload" class="btn bg-light" > <i class="fa-solid fa-upload fa-2xl  text-success" > </i> </label>
+   <h1>{{username}} <i class="fa-solid fa-check fa-1xl  text-info" > </i> </h1>
+   <p style="text-align: justify;" class="my-3" >
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab commodi voluptas ratione amet id mollitia aliquam fugiat provident vero modi sapiente, obcaecati qui non alias officia animi nobis nesciunt beatae.
+
+   </p>
+   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia suscipit dolores doloribus ducimus? Placeat ut recusandae nisi voluptates. </p>
+   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia suscipit dolores doloribus ducimus? Placeat ut recusandae nisi voluptates. </p>
+   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia suscipit dolores doloribus ducimus? Placeat ut recusandae nisi voluptates.</p>
+   <h3>Download Recipe</h3>
+   <div class="row">
+    @for (recipe of downloadList(); track $index) {
+                <div class="col-lg-2">
+                 <div class="p-3">
+                 <img routerLink="/recipes/{{recipe.recipeId}}/view" class="card-img-top" [src]="recipe.image" alt="meal img">
+                 <div class="card-body  ">
+                 <h5 class="card-title" >{{recipe.name}}</h5>      
+                 </div>
+                </div>
+        </div>
+    }
+   </div>
+
+</div>
+<app-footer></app-footer>
+
