--- a/src/app/user-collection/user-collection.html
+++ b/src/app/user-collection/user-collection.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="container my-5">
-    <h1 class="text-success text-center" >Recipe Collectiom</h1>
+    <h1 class="text-success text-center" >Recipe Collection</h1>
     <div class="row mt-5">
     @for (recipe of allRecipes(); track $index) {
         <div class="col-lg-3">
