--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -77,11 +77,13 @@ Google Play for a better experience</h5>
             <div class="scroll-text d-flex my-5" >
                 <!-- <div class="d-flex my-5"> -->
                     <!-- testimony duplicate -->
-                     <div class="border rounded w-25 p-3 me-2 text-wrap">
-                        <h5>name</h5>
-                        <p style="text-align: justify;" >message</p>
+                    @for (item of feedbacks(); track $index) {
+                         <div class="border rounded w-25 p-3 me-2 text-wrap">
+                        <h5>{{item.name}}</h5>
+                        <p style="text-align: justify;" >{{item.message}}</p>
 
                      </div>
+                    }
                 <!-- </div> -->
             </div>
 
