--- a/src/app/user-profile/user-profile.html
+++ b/src/app/user-profile/user-profile.html
@@ -2,7 +2,7 @@
 <div class="container" >
     <div style="height: 200px;" class="row bg-success"></div>
     <div style="width: 220px; height: 220px; border-radius: 50%; margin-top: -110px; " class="p-1 shadow d-flex justify-content-center align-items-center" >
-       <label for="upload"> <img style="width: 200px; height: 200px; border-radius: 50%;" [src]="userImage" alt="user profile">
+       <label for="upload"> <img style="width: 200px; height: 200px; border-radius: 50%;" [src]="userImage()" alt="user profile">
     </label>
     <input type="file" id="upload" hidden>
     </div>
@@ -17,7 +17,8 @@
    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia suscipit dolores doloribus ducimus? Placeat ut recusandae nisi voluptates.</p>
    <h3>Download Recipe</h3>
    <div class="row">
-    @for (recipe of downloadList(); track $index) {
+      @if (downloadList().length>0) {
+           @for (recipe of downloadList(); track $index) {
                 <div class="col-lg-2">
                  <div class="p-3">
                  <img routerLink="/recipes/{{recipe.recipeId}}/view" class="card-img-top" [src]="recipe.image" alt="meal img">
@@ -27,6 +28,10 @@
                 </div>
         </div>
     }
+      }@else {
+         <p class="text-primary fs-4" >User havent Download any recipe</p>
+      }
+  
    </div>
 
 </div>
