--- a/src/app/admin/admin-dashboard/admin-dashboard.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.html
@@ -24,6 +24,52 @@
                      </div>
                 </div>
             </div>
+            <div class="row my-5">
+                <!-- box -->
+                 <div class="col-lg-3">
+                    <div style="background-color: rgba(255,215,0,0.8);" class="d-flex justify-content-center align-items-center p-2 rounded text-light">
+                        <i class="fa-solid fa-users fs-1"></i>
+                        <div class="ms-5" >
+                            <h4>Users</h4>
+                            <h3>{{userCount()}}</h3>
+                        </div>
+
+                    </div>
+                 </div>
+                  <!-- box -->
+                 <div class="col-lg-3">
+                    <div style="background-color: rgba(255, 102, 0, 0.8);" class="d-flex justify-content-center align-items-center p-2 rounded text-light">
+                        <i class="fa-solid fa-bowl-rice fs-1"></i>
+                        <div class="ms-5" >
+                            <h4>Recipes</h4>
+                            <h3>{{recipeCount()}}</h3>
+                        </div>
+
+                    </div>
+                 </div>
+                  <!-- box -->
+                 <div class="col-lg-3">
+                    <div style="background-color: rgba(0, 119, 255, 0.8);" class="d-flex justify-content-center align-items-center p-2 rounded text-light">
+                        <i class="fa-solid fa-download fs-1"></i>
+                        <div class="ms-5" >
+                            <h4>Downloads</h4>
+                            <h3>{{downloadCount()}}</h3>
+                        </div>
+
+                    </div>
+                 </div>
+                  <!-- box -->
+                 <div class="col-lg-3">
+                    <div style="background-color: rgba(212, 0, 224, 0.8);" class="d-flex justify-content-center align-items-center p-2 rounded text-light">
+                        <i class="fa-solid fa-message fs-1"></i>
+                        <div class="ms-5" >
+                            <h4>Notification</h4>
+                            <h6>You Have <a routerLink="/admin/feedbacks">{{notificationCount()}}</a> new Feedbacks</h6>
+                        </div>
+
+                    </div>
+                 </div>
+            </div>
     </div>
    </div> 
 </div>
