--- a/src/app/admin/admin-recipelist/admin-recipelist.html
+++ b/src/app/admin/admin-recipelist/admin-recipelist.html
@@ -31,7 +31,7 @@
                             <td>
                                 <div class="d-flex">
                                     <a routerLink="/admin/recipes/{{recipe._id}}" class="btn text-warning"><i class="fa-solid fa-edit"></i></a>
-                                    <button class="btn text-danger ms-1"><i class="fa-solid fa-trash"></i></button>
+                                    <button (click)="deleteRecipe(recipe._id)" class="btn text-danger ms-1"><i class="fa-solid fa-trash"></i></button>
                                 </div>
                             </td>
                         </tr>
